# openuni

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  VISION.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci-api.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/core/: __init__.py  config.py  universities.py
apps/api/app/models/: chat.py  university.py
apps/api/app/rag/: __init__.py  generation.py  retrieval.py
apps/api/app/routers/: chat.py
apps/api/tests/: test_chat.py  test_generation.py  test_retrieval.py  test_universities.py
apps/web/: README.md
docs/: README.md
infra/: README.md  docker-compose.yml
universities/demo/: README.md  config.yaml
universities/demo/sources/: enrollment-faq.txt  exam-regulations.txt
